[gd_scene load_steps=15 format=3 uid="uid://dkqlcpalkmlox"]

[ext_resource type="Script" path="res://scenes/died/died.gd" id="1_7ygrh"]
[ext_resource type="FontFile" uid="uid://c73xqc05ocf2v" path="res://scenes/resources/fonts/PressStart2P-Regular.ttf" id="2_arsi1"]
[ext_resource type="Texture2D" uid="uid://ca4pn7c3jklx7" path="res://scenes/resources/tiles/sprite/tile_red.png" id="2_u641j"]
[ext_resource type="Texture2D" uid="uid://m2i2vu6d7bkh" path="res://scenes/player/sprites/idle.png" id="3_e50u5"]
[ext_resource type="PackedScene" uid="uid://olkhhamwm1pr" path="res://scenes/ui/button/button.tscn" id="4_wtob0"]
[ext_resource type="StyleBox" uid="uid://s0glpx27rnqy" path="res://scenes/ui/button/red_button.tres" id="5_tks15"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wlobm"]
atlas = ExtResource("3_e50u5")
region = Rect2(0, 0, 18, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvv8d"]
atlas = ExtResource("3_e50u5")
region = Rect2(18, 0, 18, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbgov"]
atlas = ExtResource("3_e50u5")
region = Rect2(36, 0, 18, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_epbek"]
atlas = ExtResource("3_e50u5")
region = Rect2(54, 0, 18, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_yphyj"]
atlas = ExtResource("3_e50u5")
region = Rect2(72, 0, 18, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_5kn0j"]
atlas = ExtResource("3_e50u5")
region = Rect2(90, 0, 18, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6unb"]
atlas = ExtResource("3_e50u5")
region = Rect2(108, 0, 18, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_lljra"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wlobm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvv8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbgov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epbek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yphyj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kn0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6unb")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[node name="Died" type="Node"]
script = ExtResource("1_7ygrh")

[node name="BackgroundSprite2D" type="Sprite2D" parent="."]
position = Vector2(140, 90)
scale = Vector2(9.75, 6.625)
texture = ExtResource("2_u641j")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 15

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="PlayerIdle" type="AnimatedSprite2D" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
position = Vector2(-18, 11)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_lljra")
autoplay = "default"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_arsi1")
theme_override_font_sizes/font_size = 10
text = "You Popped!"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_arsi1")
theme_override_font_sizes/font_size = 10
text = "You scored 0"
horizontal_alignment = 1

[node name="HBoxContainer2" type="VBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TryAgainButton" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("4_wtob0")]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"ButtonBlue"
text = "Try Again"

[node name="QuitButton" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("4_wtob0")]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = ExtResource("5_tks15")
text = "Give Up"
